--- a/src/main/resources/fxml/Setting.fxml
+++ b/src/main/resources/fxml/Setting.fxml
@@ -121,6 +121,7 @@
                           <rowConstraints>
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
                               <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
@@ -135,6 +136,11 @@
                               <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
                                  <children>
                                     <RadioButton fx:id="mySkyRadioButton" mnemonicParsing="false" onAction="#getBackground" text="SKY" toggleGroup="$background" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="2">
+                                 <children>
+                                    <RadioButton fx:id="myCustomRadioButton" mnemonicParsing="false" onAction="#getBackground" text="CUSTOM" toggleGroup="$background" />
                                  </children>
                               </HBox>
                            </children>
