--- a/src/main/resources/CSS/CSSBase.css
+++ b/src/main/resources/CSS/CSSBase.css
@@ -1,34 +1,8 @@
 .root {
-    -root-filll : #1e74c6;
-    -fx-accent:-root-filll;
-    -fx-focus-color: -fx-accent;
-    -root-fill: #373e43;
-    -root-fill2:#FFFFFFFF;
-    -fx-base:-root-fill;
+    -root-fill:#373e43;
+    -fx-base: -root-fill;
   //  -fx-control-inner-background: derive(-fx-base, 35%);
     -fx-control-inner-background-alt: -fx-control-inner-background ;
-}
-.label{
-    -label-text-mmm:#D3D3D3FF;
-    -fx-text-fill:-label-text-mmm;
-}
-.text-field {
-    -text-field-fill:#808080FF;
-    -fx-prompt-text-fill: -text-field-fill;
-}
-.titulo{
-    -fx-font-weight: bold;
-    -fx-font-size: 18px;
-}
-.button{
-    -fx-focus-traversable: false;
-}
-*{
-    -fx-fill-default:#FFFFFFFF;
-}
-.button:hover{
-
-    -fx-text-fill:-root-fill2;
 }
 .separator *.line {
     -fx-background-color: #3C3C3C;
@@ -46,7 +20,7 @@
 
 .table-view{
     /*-fx-background-color: derive(-fx-base, 10%);*/
-   // -fx-selection-bar-non-focused: derive(-fx-base, 50%);
+  //  -fx-selection-bar-non-focused: derive(-fx-base, 50%);
 }
 
 .table-view .column-header .label{
@@ -54,12 +28,14 @@
     -fx-font-weight: none;
 }
 
-/*.list-cell:even,
+/*
+.list-cell:even,
 .list-cell:odd,
 .table-row-cell:even,
 .table-row-cell:odd{
     -fx-control-inner-background: derive(-fx-base, 15%);
-}*/
+}
+*/
 
 .list-cell:empty,
 .table-row-cell:empty {
@@ -69,4 +45,8 @@
 .table-row-cell{
     -fx-border-color: transparent;
     -fx-table-cell-border-color:transparent;
+}
+.titulo{
+    -fx-font-weight: bold;
+    -fx-font-size: 18px;
 }
