--- a/src/main/resources/fxml/ForwardPopUp.fxml
+++ b/src/main/resources/fxml/ForwardPopUp.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -9,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Explore">
+<GridPane gridLinesVisible="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="520.0" style="-fx-background-color: #3389f2;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ForwardPopUpControllers">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     </columnConstraints>
@@ -19,7 +20,7 @@
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <children>
-        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: blue;">
+        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
             <children>
                 <Label alignment="CENTER" prefHeight="54.0" prefWidth="578.0" text="Forward To">
                     <font>
@@ -28,7 +29,7 @@
                 </Label>
             </children>
         </HBox>
-        <GridPane GridPane.rowIndex="1">
+        <GridPane gridLinesVisible="true" GridPane.rowIndex="1">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
@@ -37,7 +38,7 @@
                 <RowConstraints minHeight="10.0" percentHeight="100.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #ffd662;">
                     <children>
                         <Label text="PVs">
                             <font>
@@ -46,7 +47,7 @@
                         </Label>
                     </children>
                 </HBox>
-                <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
+                <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #ffd662;" GridPane.columnIndex="1">
                     <children>
                         <Label text="Groups">
                             <font>
@@ -68,12 +69,18 @@
             <children>
                 <ScrollPane fitToWidth="true" prefHeight="200.0" prefWidth="200.0">
                     <content>
-                        <VBox fx:id="pvs" prefHeight="607.0" prefWidth="231.0" spacing="5.0" />
+                        <VBox fx:id="pvs" alignment="TOP_CENTER" prefHeight="607.0" prefWidth="231.0" spacing="5.0" style="-fx-background-color: #5d86b3;">
+                     <padding>
+                        <Insets left="3.0" right="3.0" />
+                     </padding></VBox>
                     </content>
                 </ScrollPane>
                 <ScrollPane fitToWidth="true" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                     <content>
-                        <VBox fx:id="groups" prefHeight="607.0" prefWidth="231.0" spacing="5.0" />
+                        <VBox fx:id="groups" alignment="TOP_CENTER" prefHeight="607.0" prefWidth="231.0" spacing="5.0" style="-fx-background-color: #5d86b3;">
+                     <padding>
+                        <Insets left="3.0" right="3.0" />
+                     </padding></VBox>
                     </content>
                 </ScrollPane>
             </children>
