--- a/src/main/resources/fxml/PvsPage.fxml
+++ b/src/main/resources/fxml/PvsPage.fxml
@@ -31,7 +31,7 @@
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" percentHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" percentHeight="4.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="2.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" percentHeight="7.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
@@ -56,9 +56,9 @@
             </ScrollPane>
             <GridPane style="-fx-background-color: BLUE;">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="15.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="15.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -66,7 +66,7 @@
                <children>
                   <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: BLUE;">
                      <children>
-                        <ImageView fitHeight="40.0" fitWidth="42.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="36.0" fitWidth="36.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../images/arrowhead_left.png" />
                            </image>
@@ -159,6 +159,7 @@
                   </GridPane>
                </children>
             </GridPane>
+            <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: skyblue;" GridPane.rowIndex="1" />
          </children>
       </GridPane>
       <GridPane fx:id="rightGridPain" GridPane.columnIndex="1">
@@ -188,7 +189,7 @@
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="9.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="29.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
@@ -223,7 +224,7 @@
                      <children>
                         <HBox prefHeight="100.0" prefWidth="200.0">
                            <children>
-                              <Label fx:id="pvName" prefHeight="68.0" prefWidth="279.0" text="name">
+                              <Label fx:id="pvName" prefHeight="42.0" prefWidth="278.0" text="name">
                                  <padding>
                                     <Insets left="20.0" />
                                  </padding>
@@ -249,17 +250,16 @@
                   </GridPane>
                   <GridPane GridPane.columnIndex="3">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="25.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="25.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="25.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="25.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="4">
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="3">
                            <children>
                               <ImageView fx:id="zarebbin" fitHeight="40.0" fitWidth="40.0" onMouseClicked="#visibleSearchInPv" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -271,7 +271,7 @@
                               </ImageView>
                            </children>
                         </HBox>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="3">
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2">
                            <children>
                               <ImageView fx:id="block" fitHeight="40.0" fitWidth="40.0" onMouseClicked="#BlockUser" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -283,7 +283,7 @@
                               </ImageView>
                            </children>
                         </HBox>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2">
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
                            <children>
                               <ImageView fitHeight="40.0" fitWidth="40.0" onMouseClicked="#VisitPage" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -295,7 +295,7 @@
                               </ImageView>
                            </children>
                         </HBox>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                            <children>
                               <ImageView fx:id="arrow" fitHeight="40.0" fitWidth="40.0" onMouseClicked="#newMessageOrDown" pickOnBounds="true" preserveRatio="true" rotate="180.0">
                                  <image>
@@ -378,7 +378,7 @@
                               <Insets left="7.0" />
                            </HBox.margin>
                         </ImageView>
-                        <Label fx:id="searchIndex" prefHeight="18.0" prefWidth="36.0" text="(0)">
+                        <Label fx:id="searchIndex" prefHeight="18.0" prefWidth="46.0" text="(0)">
                            <HBox.margin>
                               <Insets left="5.0" />
                            </HBox.margin>
