--- a/src/main/resources/fxml/UserIconInFollowingFollowerPage.fxml
+++ b/src/main/resources/fxml/UserIconInFollowingFollowerPage.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="total" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#visitPage" prefHeight="72.0" prefWidth="425.0" style="-fx-background-color: #000437; -fx-background-radius: 50;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.OtherUserPageControllers.UserIconInFollowingFollowerPageController">
+<GridPane fx:id="total" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" onMouseClicked="#visitPage" prefHeight="72.0" prefWidth="425.0" style="-fx-background-color: #000437; -fx-background-radius: 50;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.OtherUserPageControllers.UserIconInFollowingFollowerPageController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="22.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -78,6 +78,9 @@
                </GridPane.margin>
             </Label>
          </children>
+         <GridPane.margin>
+            <Insets left="10.0" />
+         </GridPane.margin>
       </GridPane>
    </children>
    <cursor>
