--- a/src/main/resources/fxml/ViewUserInAnalyzePage.fxml
+++ b/src/main/resources/fxml/ViewUserInAnalyzePage.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="total" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#visitPage" prefHeight="72.0" prefWidth="850.0" style="-fx-background-color: #000437;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ViewUserInAnalyzePageController">
+<GridPane fx:id="total" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#visitPage" prefHeight="72.0" prefWidth="850.0" style="-fx-background-color: #000437;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.AnalysePageControllers.ViewUserInAnalyzePageController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="22.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
