--- a/src/main/resources/CSS/CUSTOM.css
+++ b/src/main/resources/CSS/CUSTOM.css
@@ -3,18 +3,17 @@
     -fx-accent:-root-filll;
     -fx-focus-color: -fx-accent;
     -root-fill: #373e43;
-    -root-fill2:#FFFFFFFF;
     -fx-base:-root-fill;
-  //  -fx-control-inner-background: derive(-fx-base, 35%);
+//  -fx-control-inner-background: derive(-fx-base, 35%);
     -fx-control-inner-background-alt: -fx-control-inner-background ;
 }
 .label{
-    -label-text-mmm:#D3D3D3FF;
-    -fx-text-fill:-label-text-mmm;
+
+    -fx-text-fill:#D3D3D3FF;
 }
 .text-field {
-    -text-field-fill:#808080FF;
-    -fx-prompt-text-fill: -text-field-fill;
+
+    -fx-prompt-text-fill: #808080FF;
 }
 .titulo{
     -fx-font-weight: bold;
@@ -23,12 +22,9 @@
 .button{
     -fx-focus-traversable: false;
 }
-*{
-    -fx-fill-default:#FFFFFFFF;
-}
 .button:hover{
 
-    -fx-text-fill:-root-fill2;
+    -fx-text-fill:#FFFFFFFF;
 }
 .separator *.line {
     -fx-background-color: #3C3C3C;
@@ -37,7 +33,7 @@
 }
 
 .scroll-bar{
-   // -fx-background-color: derive(-fx-base,45%)
+// -fx-background-color: derive(-fx-base,45%)
 }
 
 .button:default {
@@ -46,7 +42,7 @@
 
 .table-view{
     /*-fx-background-color: derive(-fx-base, 10%);*/
-   // -fx-selection-bar-non-focused: derive(-fx-base, 50%);
+// -fx-selection-bar-non-focused: derive(-fx-base, 50%);
 }
 
 .table-view .column-header .label{
