--- a/src/main/resources/fxml/AnalyzePage.fxml
+++ b/src/main/resources/fxml/AnalyzePage.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="all" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="947.75" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.AnalysePageControllers.AnalyzePageController">
+<GridPane fx:id="all" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="947.75" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.AnalysePageControllers.AnalyzePageController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="100.0" prefWidth="100.0" />
    </columnConstraints>
@@ -69,7 +69,7 @@
       <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="2" />
       <ScrollPane fitToWidth="true" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
          <content>
-            <VBox fx:id="fill" prefHeight="756.0" prefWidth="929.0" />
+            <VBox fx:id="fill" prefHeight="756.0" prefWidth="929.0" spacing="10.0" />
          </content>
       </ScrollPane>
    </children>
