--- a/src/main/resources/fxml/Explore.fxml
+++ b/src/main/resources/fxml/Explore.fxml
@@ -7,18 +7,19 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="all" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="947.75" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ExploreController">
+<GridPane fx:id="all" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="947.75" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ExploreController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="100.0" prefWidth="100.0" />
    </columnConstraints>
    <rowConstraints>
       <RowConstraints minHeight="10.0" percentHeight="13.6" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" percentHeight="45.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" percentHeight="5.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" percentHeight="50.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" percentHeight="0.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" percentHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" percentHeight="6.4" prefHeight="30.0" vgrow="SOMETIMES" />
    </rowConstraints>
@@ -89,5 +90,14 @@
             <VBox fx:id="adRecommendation" prefHeight="371.0" prefWidth="929.0" />
          </content>
       </ScrollPane>
+      <HBox alignment="CENTER" minHeight="0.0" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: purple;" GridPane.rowIndex="2">
+         <children>
+            <Label alignment="CENTER" minHeight="0.0" prefHeight="30.0" prefWidth="912.0" text="Recommended Ads" textFill="#f5eded">
+               <font>
+                  <Font name="Bell MT" size="24.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
    </children>
 </GridPane>
