--- a/src/main/resources/fxml/ShowAnotherUserPage.fxml
+++ b/src/main/resources/fxml/ShowAnotherUserPage.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="all" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="735.0" prefWidth="892.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.OtherUserPageControllers.ShowAnotherUserPageController">
+<GridPane fx:id="all" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="735.0" prefWidth="892.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.OtherUserPageControllers.ShowAnotherUserPageController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
@@ -211,9 +211,9 @@
                   </GridPane>
                </children>
             </GridPane>
-            <VBox GridPane.rowIndex="1">
+            <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.rowIndex="1">
                <children>
-                  <Label fx:id="bio" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="18.0" prefWidth="1087.0" style="-fx-border-color: black;" text="BIO: " textFill="WHITE">
+                  <Label fx:id="bio" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="19.0" prefWidth="666.0" style="-fx-border-color: black;" text="BIO: " textFill="WHITE">
                      <font>
                         <Font name="Bell MT Bold" size="14.0" />
                      </font>
@@ -221,8 +221,13 @@
                         <Insets left="25.0" />
                      </padding>
                   </Label>
+                  <Label fx:id="type" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="21.0" prefWidth="229.0" style="-fx-border-color: black;" text="Type:" textFill="#f8eded">
+                     <font>
+                        <Font name="Bell MT" size="14.0" />
+                     </font>
+                  </Label>
                </children>
-            </VBox>
+            </HBox>
          </children>
       </GridPane>
       <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="2" />
