--- a/src/main/resources/fxml/MyMessageBox.fxml
+++ b/src/main/resources/fxml/MyMessageBox.fxml
@@ -9,9 +9,10 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="total" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="0.0" prefHeight="85.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.PvControllers.MyMessageBoxController">
+<GridPane fx:id="total" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="85.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.PvControllers.MyMessageBoxController">
   <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
@@ -20,17 +21,18 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <GridPane fx:id="messageGrid" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="142.0" prefWidth="240.0" style="-fx-background-color: #000437; -fx-background-radius: 10;" GridPane.columnIndex="1">
+      <GridPane fx:id="messageGrid" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="84.8" prefWidth="240.0" style="-fx-background-color: #000437; -fx-background-radius: 10;" GridPane.columnIndex="1">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" percentHeight="23.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="0.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" percentHeight="64.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" percentHeight="13.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <HBox alignment="CENTER_RIGHT" maxHeight="30.0" minHeight="13.6" prefHeight="13.6" prefWidth="200.0" spacing="35.0" GridPane.rowIndex="2">
+            <HBox alignment="CENTER_RIGHT" maxHeight="30.0" minHeight="13.6" prefHeight="13.6" prefWidth="200.0" spacing="35.0" GridPane.rowIndex="3">
                <children>
                   <Label fx:id="edited" text="Edited" textFill="WHITE">
                      <font>
@@ -50,7 +52,12 @@
                   <Insets />
                </opaqueInsets>
             </HBox>
-            <TextArea fx:id="ContentTextArea" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="54.0" prefWidth="241.0" style="-fx-background-color: #000437; -fx-border-color: Red;" text="&#10;" wrapText="true" GridPane.rowIndex="1">
+            <HBox fx:id="visiblePhoto" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="0.0" style="-fx-background-color: green;" GridPane.rowIndex="1">
+               <children>
+                  <Rectangle fx:id="photoPlace" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="34.0" stroke="BLACK" strokeType="INSIDE" width="300.0" />
+               </children>
+            </HBox>
+            <TextArea fx:id="ContentTextArea" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="54.0" prefWidth="241.0" style="-fx-background-color: #000437; -fx-border-color: Red;" text="&#10;" wrapText="true" GridPane.rowIndex="2">
                <font>
                   <Font name="Bell MT" size="20.0" />
                </font>
@@ -58,7 +65,7 @@
                   <Cursor fx:constant="DEFAULT" />
                </cursor>
             </TextArea>
-            <GridPane maxHeight="80.0" prefHeight="0.0" prefWidth="240.0">
+            <GridPane maxHeight="80.0" prefHeight="0.0" prefWidth="240.0" style="-fx-background-color: yellow;">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
